<resources>
    <string name="app_name">EnvioRapido_PDM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    /* Login */
    <string name="login">Inicio de Sesión</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrarse">Registrarse</string>
    <string name="rastreoBoton">Rastrear Paquete</string>
    /* RASTREO */
    <string name="rastreo">Rastreo de Paquete</string>
    <string name="codigo">Cod. Paquete:</string>
    <string name="consultaPaquete">Consultar Paquete</string>
    <string name="consultaBoton">Consultar</string>
    <string name="horaS">Hora de salida: </string>
    <string name="fechaS">Fecha de salida: </string>
    <string name="destino">Destinatario: </string>
    <string name="ubicacion">Ubicación actual: </string>
    /* REGISTRAR ENVIO NUEVO */
    <string name="registroE">Registrar Envío: </string>
    <string name="datos">Datos del Destinatario: </string>
    <string name="nombre">Nombre: </string>
    <string name="apellido">Apellido: </string>
    <string name="contacto">Contacto: </string>
    <string name="dui">DUI: </string>
    <string name="depto">Departamento: </string>
    <string name="municipio">Municipio: </string>
    <string name="direc">Dirección: </string>
    <string name="datosPaquete">Datos del Paquete: </string>
    <string name="tamaño">Tamaño (cm): </string>
    <string name="peso">Peso (lb): </string>
    <string name="fechaPedido">Fecha del pedido: </string>
    <string name="fechaEntrega">Fecha de entrega: </string>
    <string name="asignacion">Asignar Repartidor: </string>
    <string name="exito">Envío Exitoso!</string>
    <string name="compartir">Compartir</string>
    /* HISTORIAL DE ENVIOS */
    <string name="historial">Historial de Envíos</string>
    <string name="historialPendientes">Pedidos por entregar</string>
    <string name="listaPedidos">Pedidos</string>
    /* DATOS DE ENVIOS */
    <string name="paquete">Paquete: </string>
    <string name="repartidor">Repartidor: </string>
    <string name="estado">Estado: </string>
    <string name="completado">Completado: </string>
    <string name="camino">En Camino: </string>
    <string name="pendiente">Pendiente: </string>
    <string name="comentario">Comentarios: </string>
    /* ATENCION AL CLIENTE */
    <string name="atencion">Atención al Cliente: </string>
    <string name="chatBoton">Iniciar Chat </string>
    <string name="chat">Chat de EnvioRapido: </string>
    <string name="enviarMens">Enviar </string>
    <string name="chatTitutlo">Chat rapido </string>
    /* MI USUARIO */
    <string name="usuario">Usuario: </string>
    <string name="perfil">Mi Perfil</string>
    <string name="editar">Editar Perfil</string>
    <string name="listaUsuario">Usuarios </string>
    <string name="vendedor">Vendedor </string>
    <string name="repartidorRol">Repartidor </string>
    <string name="total">Total de Envíos: </string>
    /* Login */
    <string name="logout">Cerrar Sesión</string>
    /* Datos de usuario */
    <string name="correo">Correo: </string>
    <string name="contrasena">Contraseña: </string>
    <string name="repContrasena">Repetir Contraseña: </string>
    <string name="datosUsuario">Datos del Usuario</string>
    <string name="registarUs">Registrar Usuario</string>
    <string name="olvidarPass">Olvidé mi contraseña</string>
    <string name="recuperarPass">Recuperar Contraseña</string>
    <string name="recuperarPassEnviar">Enviar</string>
    /* Inf de prueba */
    <string name="pruebaHoraS">10:00 AM</string>
    <string name="pruebaFechaS">09/04/2024</string>
    <string name="pruebaDestinat">Laminio Echegoyen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    /* Usuarios */

    <string name="Item_nombre_usuario">Nombre de Usuario</string>
    <string name="Item_email_usuario">Email Usuario</string>
    <string name="Et_buscar_usuario">Buscar Usuario</string>


    /* Chat */
    
    <string name="N_usuario_chat">Nombre de Usuario</string>
    <string name="ET_mensaje">Escriba un mensaje</string>

    /* Chat */

    <string name="TXT_ver_mensaje">Hola, como estas?</string>


    
    
    


</resources>