<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.usuario.ModificarUsuario">

    <EditText
        android:id="@+id/txtcontrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:background="@drawable/esquinas_redondeadas"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtRepetirContrasena"
        app:layout_constraintEnd_toEndOf="@+id/txtRepetirContrasena" />

    <EditText
        android:id="@+id/txtRepetirContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/esquinas_redondeadas"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView81"
        tools:layout_editor_absoluteY="496dp" />

    <EditText
        android:id="@+id/txtusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:background="@drawable/esquinas_redondeadas"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtcontrasena"
        app:layout_constraintEnd_toEndOf="@+id/txtcontrasena" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/esquinas_redondeadas"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtusuario"
        app:layout_constraintEnd_toEndOf="@+id/txtusuario" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/esquinas_redondeadas"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtCorreo"
        app:layout_constraintEnd_toEndOf="@+id/txtCorreo" />

    <TextView
        android:id="@+id/textView75"
        style="@style/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        tools:layout_editor_absoluteX="116dp" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="94dp"
        android:layout_height="91dp"

        app:srcCompat="@drawable/baseline_camera_alt_24"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/textView76"
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/textView77"
        app:layout_constraintEnd_toStartOf="@+id/txtNombreUsuario"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />

    <TextView
        android:id="@+id/textView77"
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        app:layout_constraintStart_toStartOf="@+id/textView78"
        tools:layout_editor_absoluteY="302dp" />

    <TextView
        android:id="@+id/textView78"
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        app:layout_constraintStart_toStartOf="@+id/textView79"
        tools:layout_editor_absoluteY="354dp" />

    <TextView
        android:id="@+id/textView79"
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        app:layout_constraintStart_toStartOf="@+id/textView80"
        tools:layout_editor_absoluteY="408dp" />

    <TextView
        android:id="@+id/textView80"
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasena"
        app:layout_constraintStart_toStartOf="@+id/textView81"
        tools:layout_editor_absoluteY="448dp" />

    <TextView
        android:id="@+id/textView81"
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/repContrasena"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="495dp" />

    <EditText
        android:id="@+id/txtNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:background="@drawable/esquinas_redondeadas"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtApellido"
        app:layout_constraintEnd_toEndOf="@+id/txtApellido"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnAceptar"
        style="@style/EstiloBoton"
        android:layout_width="110dp"
        android:layout_height="58dp"
        android:text="Aceptar"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="616dp" />

    <Button
        android:id="@+id/btnBuscar"
        style="@style/EstiloBoton"
        android:layout_width="120dp"
        android:layout_height="58dp"
        android:text="Buscar"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="628dp" />

</androidx.constraintlayout.widget.ConstraintLayout>