<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.enviorapido_pdm.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.enviorapido_pdm.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.enviorapido_pdm.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/registrarEnvioFragment"
        android:name="com.example.enviorapido_pdm.ui.envios.RegistrarEnvioFragment"
        android:label="fragment_registrar_envio"
        tools:layout="@layout/fragment_registrar_envio" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.enviorapido_pdm.ui.administracion.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/logoutFragment"
        android:name="com.example.enviorapido_pdm.ui.administracion.LogoutFragment"
        android:label="fragment_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/rastrearPaqueteFragment"
        android:name="com.example.enviorapido_pdm.ui.rastreo.RastrearPaqueteFragment"
        android:label="fragment_rastrear_paquete"
        tools:layout="@layout/fragment_rastrear_paquete" />
    <fragment
        android:id="@+id/datosRastreoPaqueteFragment"
        android:name="com.example.enviorapido_pdm.ui.rastreo.DatosRastreoPaqueteFragment"
        android:label="fragment_datos_rastreo_paquete"
        tools:layout="@layout/fragment_datos_rastreo_paquete" />
</navigation>